# backtesting-platform-imc

./: .gitignore  README.md
api/: .env.example  .gitignore  Makefile  Procfile  pyproject.toml
api/cli/: __init__.py  api_client.py  gridsearch.py  main.py
api/engine/: __init__.py  errors.py  settings.py
api/engine/compat/: __init__.py  datamodel.py
api/engine/config/: __init__.py  rounds.json  rounds.py
api/engine/datamodel/: __init__.py  adapters.py  types.py
api/engine/logging/: __init__.py  event_log.py
api/engine/market/: __init__.py  loader.py  schema.py  snapshot.py
api/engine/matching/: __init__.py  base.py  depth_and_trades.py  depth_only.py  factory.py  imc_matcher.py
api/engine/metrics/: __init__.py  inventory.py  pnl.py  summary.py
api/engine/montecarlo/: __init__.py  aggregation.py  builder.py  calibration.py  rng.py  runner.py
api/engine/simulator/: __init__.py  limits.py  runner.py  state.py  strategy_loader.py  strategy_params.py
api/server/: __init__.py  auth.py  deps.py  main.py  settings.py
api/server/routers/: batches.py  datasets.py  mc.py  runs.py  strategies.py  studies.py
api/server/schemas/: batches.py  mc.py  runs.py  studies.py
api/server/services/: __init__.py  batch_runner.py  batch_service.py  dataset_service.py  mc_aggregation.py  mc_path_runner.py  mc_runner.py  mc_service.py  run_service.py  strategy_service.py  study_runner.py  study_service.py  study_space.py
api/server/storage/: __init__.py  artifacts.py  mc_artifacts.py  registry.py
api/tests/: test_foundation.py
api/tests/cli/: test_api_client.py  test_batch_command.py  test_study_command.py
api/tests/engine/: _mc_fixtures.py  test_datamodel.py  test_depth_and_trades.py  test_event_log.py  test_market.py  test_matching.py  test_mc_aggregation.py  test_mc_block_bootstrap.py  test_mc_gbm.py  (+10 more)
(+112 files in other folders)
