[project]
name = "prosperity-api"
version = "0.1.0"
description = "IMC Prosperity 4 backtesting engine, FastAPI service, and CLI"
requires-python = ">=3.11"
readme = { text = "See ../../SPEC.md", content-type = "text/markdown" }
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "motor>=3.5",
    "pymongo>=4.8",
    "httpx>=0.27",
    "jsonpickle>=3.2",
    "python-multipart>=0.0.9",
    "optuna>=3.6",
    "numpy>=2.0",
]

[project.scripts]
prosperity = "cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "mongomock-motor>=0.0.34",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "server", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]
"cli/**" = ["B008"]  # typer.Option()/Argument() in defaults is idiomatic
"server/**" = ["B008"]  # fastapi Depends()/Query()/Header() in defaults is idiomatic

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "engine.*"
strict = true

[[tool.mypy.overrides]]
# engine.compat is a bundled copy of IMC's untyped datamodel — exempt from strict checking.
module = "engine.compat.*"
strict = false
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
